--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "tape": "^5.0.0",
     "tmp": "^0.2.0",
     "tslint": "^6.0.0",
-    "typescript": "^3.7.5",
+    "typescript": "~5.3.3",
     "uglify-js": "^3.7.7",
     "vinyl-buffer": "^1.0.1",
     "vinyl-fs": "^3.0.3",
